--- a/ICTO-SW/Nieuwsbrief/24-25-ed1.html
+++ b/ICTO-SW/Nieuwsbrief/24-25-ed1.html
@@ -120,9 +120,9 @@
 
         <!-- Ans -->
         <div class="content-block" style="background-color: #fafbff; border: 1px solid #351ca6">
-            <h4 class="header-icto ui-priority-primary"><u>New digital examination software Ans</u></h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">New digital examination platform: Ans</h4>
             <div class="content-item">
-                <b>As you have may already heard, the UvA will transition to a new software system for digital testing in September 2024: Ans! From now on, TestVision will only be available in 'read-only' mode.</b>
+                <b>As you have may already heard, the UvA will transition to a new software system for digital testing in September 2024, Ans! From now on, TestVision will only be available in 'read-only' mode.</b>
                 <br><br>Will you be administering digital exams this semester or are you curious about the new software? Sign up for the <a href="https://canvas.uva.nl/courses/45162/pages/tools-ans-training" target="_blank">Ans training sessions</a> offered by the ICTO teams of the Faculty of Society & Behaviour. Two training sessions will be given at various moments: one training session is about creating an exam and the other about reviewing an exam.   
                 <br><br>
                 In addition to the general training sessions, <a href="https://canvas.uva.nl/courses/45162/pages/tools-ans-training" target="_blank">walk-ins</a> are also organized. As a teacher you can just walk in with your laptop so we can answer your questions on the spot. Click the button below for the available dates.
@@ -140,7 +140,7 @@
 
         <!-- Meet ICTO -->
         <div class="content-item">
-            <h4 class="header-icto">Meet the ICTO team</h4>
+            <h3 style="padding-bottom:7pt">Meet the ICTO team</h4>
             Come find us at REC B7.08. Usually there is someone available at the office from Mondays to Thursdays. Of course, you can also e-mail us at <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a> or make an appointment via the <a href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">booking form</a>. An appointment can take place online or at the office.
         </div>
 
@@ -148,7 +148,7 @@
         <table style="width:100%; font-size:9pt; margin-top:20px">
             <tbody>
                 <tr>
-                    <td style="width:15%; vertical-align: top;"><img style="width: auto; height: 80px;" src="https://canvas.uva.nl/courses/8175/files/7105585/preview" alt="shoot (231) kopie.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105585" data-api-returntype="File" /></td>
+                    <td style="width:15%; vertical-align: top;"><img style="width: auto; height: 80px;" src="/courses/8175/files/11403497/preview" alt="WhatsApp Image 2024-08-29 at 11.42..jpeg"  data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105585" data-api-returntype="File" /></td>
                     <td style="width:35%; vertical-align: top; padding: 0 10px;"><strong>Lisanne van den Boomen</strong><br /><i>Teamleader<br />Working days: tue - fri</i></td>
                     <td style="width:15%;vertical-align: top;"><img style="width: auto; height: 80px;" src="https://canvas.uva.nl/courses/8175/files/7117427/preview" alt="olivier.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7117427" data-api-returntype="File" /></td>
                     <td style="width:35%; vertical-align: top; padding: 0 10px; "><strong>Olivier Oude Booijink</strong> <br /><i>Student-assistant<br />Variable working days</i></td>
@@ -181,11 +181,11 @@
     <!-- Linker kolom: Final grades -->
      <div class="col-md-6 ">
         <div class="content-block" style="background-color: #fafbff; border: 1px solid #351ca6">
-            <h4 class="header-icto ui-priority-primary"><u>Final Grades update</u></h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Final Grades has been upgraded</h4>
             <div class="content-item">
-                <b>The grade calculation tool within Canvas has undergone an update this year. The tool works largely the same but looks a little different than you may be used to. One benefit of the update is that the tool now works a lot faster, especially in courses with a large number of students.  </b> 
-                <br><br>Did you have difficulty preparing the calculation set-up last year? Or did you run into some issues submitting the grades to SIS? Perhaps you just have some very complicated ideas on how you’d like to calculate the final grade. Whatever the case, we strongly encourage you to set up a meeting with us by making an appointment with us. <a title="Book an appointment" href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">booking form</a> (select 'Final Grades support'). 
-                <br><br>The appointment can be done online or on location. 
+                <b>The grade calculation tool within Canvas has undergone an update this year. The tool works largely the same but looks a little different than you may be used to. One benefit of the update is that the tool now works a lot faster, especially in courses with a large number of students.</b>
+                <br><br>Did you have difficulty preparing the calculation set-up last year? Or did you run into some issues submitting the grades to SIS? Perhaps you just have some very complicated ideas on how you’d like to calculate the final grade. Whatever the case, we strongly encourage you to set up a meeting with us by making an appointment with us. <a title="Book an appointment" href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">booking form</a> (select 'Final Grades support'). The appointment can be done online or on location.
+                <br><br>We are looking for teachers who want to leave their feedback on the Final Grades team. Sessions round will follow, please contact icto if you would like to participate.
             </div>
             <div class="buttons-keywords">
                 <a class="keywords" title="Book an appointment" style="text-decoration: none;" href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">Book an appointment</a>
@@ -197,7 +197,7 @@
     <div class="col-md-6">
 
         <div class="content-block" style="background-color: #fafbff; border: 1px solid #351ca6">
-            <h4 class="header-icto ui-priority-primary"><u>Assigning modules to sections (tutorial groups)</u></h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Assigning modules to sections (tutorial groups)</h4>
             <div class="content-item">
                 <b>A new functionality within Canvas that we would like to point out to you is the ability to assign modules to certain sections of students.</b> 
                 <br><br>This works in a similar way that you can assign assignments or quizzes to sections, and it allows you to organize your Canvas course even more conveniently. The button below will take you to instructions that explain more about how you can structure your Canvas course.
@@ -225,7 +225,7 @@
     <!-- Linker kolom: Practice material -->
     <div class="col-md-6">
         <div class="content-block" style="background-color: #fafcfb; border: 1px solid #d4d70e">
-            <h4 class="header-icto ui-priority-primary"><u>Creating practice materials in Ans & Canvas</u></h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Creating practice materials in Ans & Canvas</h4>
             <div class="content-item">
                 <b>Did you know that it is possible to create practice tests in Ans, as well as creating Canvas quizzes for students to practice?</b> 
                 <br><br>This allows you to familiarize students with the way of testing and introduce them to the ANS platform. By offering practice tests, students can better prepare and get used to the examination software, which can improve their performance during the actual exam. Want to get started with this? Contact ICTO for support and more information. 
@@ -241,7 +241,7 @@
 
         <!-- Webcolleges -->
         <div class="content-block" style="background-color: #fafcfb; border: 1px solid #d4d70e">
-            <h4 class="header-icto ui-priority-primary"><u>Web lectures</u></h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Web lectures</h4>
             <div class="content-item">
                 <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </b> 
                 <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
@@ -250,7 +250,7 @@
 
         <!-- Feedback tools -->
         <div class="content-block" style="background-color: #fafcfb; border: 1px solid #d4d70e">
-            <h4 class="header-icto ui-priority-primary"><u>Using feedback tools</u></h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Using feedback tools</h4>
             <div class="content-item">
                 <b>Did you know you can easily organize peer reviews in Canvas?</b> 
                 <br><br>This allows students to give each other feedback on their work, which provides a valuable learning experience. Students develop their critical thinking skills and learn to give and receive feedback constructively, which can significantly improve their learning process. If you are interested in incorporating this into your course, please contact ICTO for more information and support.   
@@ -268,8 +268,8 @@
 
     <!-- Linker kolom: Toegankelijkheid in digitaal onderwijs-->
     <div class="col-md-6">
-        <div class="content-block" style="background-color: #fafcfb; border: 1px solid #12b02f">
-            <h4 class="header-icto ui-priority-primary"><u>Accessibility in digital education</u></h4>
+        <div class="content-block" style="background-color:  #fbf9fa; border: 1px solid #b01290">
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Accessibility in digital education</h4>
             <div class="content-item">
                 <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </b> 
                 <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
@@ -279,8 +279,8 @@
 
     <!-- Rechter kolom: Privacy en AVG bij het gebruik van ICT in het onderwijs   -->
     <div class="col-md-6">
-        <div class="content-block" style="background-color: #fafcfb; border: 1px solid #12b02f">
-            <h4 class="header-icto ui-priority-primary"><u>Privacy in digital education</u></h4>
+        <div class="content-block" style="background-color:  #fbf9fa; border: 1px solid #b01290">
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Privacy in digital education</h4>
             <div class="content-item">
                 <b>All teachers at the university need to handle personal data of students and colleagues with care, in line with the General Data Protection Regulation (GDPR). It is strongly discouraged to store such data locally, on private devices, such as personal laptops or smartphones.</b> 
                 <br><br>Instead, always use the secure university laptop and solutions within the Office 365 package for storing and processing personal data.  When sharing files related to groups, such as student lists or results, it is essential to send as little information as possible. Avoid sharing entire email lists or other sensitive data in emails, espaecially when communicating with students. Use secure platforms and only share strictly necessary information. These practices help protect the privacy of everyone involved and meet the GDPR requirements. For more information on the ICT Code of Conduct, please click the button below.
