--- a/ICTO-SW/Nieuwsbrief/24-25-ed1.html
+++ b/ICTO-SW/Nieuwsbrief/24-25-ed1.html
@@ -120,12 +120,12 @@
 
         <!-- Ans -->
         <div class="content-block" style="background-color: #fafbff; border: 1px solid #351ca6">
-            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">New digital examination platform: Ans</h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">New digital examination platform Ans</h4>
             <div class="content-item">
                 <b>As you have may already heard, the UvA will transition to a new software system for digital testing in September 2024, Ans! From now on, TestVision will only be available in 'read-only' mode.</b>
-                <br><br>Will you be administering digital exams this semester or are you curious about the new software? Sign up for the <a href="https://canvas.uva.nl/courses/45162/pages/tools-ans-training" target="_blank">Ans training sessions</a> offered by the ICTO teams of the Faculty of Society & Behaviour. Two training sessions will be given at various moments: one training session is about creating an exam and the other about reviewing an exam.   
+                <br><br>Will you be administering digital exams this semester or are you curious about the new software? Sign up for the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=zcrxoIxhA0S5RXb7PWh05QqYLMUZ9jpBuQ01irLE4ChUQldBSEY4VU0yMDhOUzRDVjVVMDJSWDZFMi4u" target="_blank">Ans training sessions</a> offered by the ICTO teams of our faculty. Two training sessions will be given at various moments: one about creating an exam and the other about reviewing exams.   
                 <br><br>
-                In addition to the general training sessions, <a href="https://canvas.uva.nl/courses/45162/pages/tools-ans-training" target="_blank">walk-ins</a> are also organized. As a teacher you can just walk in with your laptop so we can answer your questions on the spot. Click the button below for the available dates.
+                Would you prefer to get started independently? Then we recommend you to complete the e-learning (<a href="https://rise.articulate.com/share/NB68Sz8bPQjtmz2-hamUVz1HP-6P2CAB#/" target="_blank">English</a> or <a href="https://rise.articulate.com/share/01Nbbk8FKB23fZTHoj5pQhYuoD_VNrDM#/" target="_blank">Dutch</a>). You can use your own test course in Ans' <a href="https://edu.ans.app/users/sign_in" target="_blank">test environment</a> by requesting access through this <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=zcrxoIxhA0S5RXb7PWh05QqYLMUZ9jpBuQ01irLE4ChUOEVXSzdYR08wUThFNDlBUE1BMUJKM0pJTC4u&lang=en-gb" target="_blank">form</a>. In addition to the general training sessions, <a href="https://canvas.uva.nl/courses/45162/pages/tools-ans-training" target="_blank">walk-ins</a> are organized. As a teacher you can just walk in with your laptop so we can answer your questions on the spot.
             </div>
             <div class="buttons-keywords">
                 <a class="keywords" title="Ans" style="text-decoration: none;" href="https://ans.uva.nl/" target="_blank">Log in on Ans</a>
@@ -142,6 +142,7 @@
         <div class="content-item">
             <h3 style="padding-bottom:7pt">Meet the ICTO team</h4>
             Come find us at REC B7.08. Usually there is someone available at the office from Mondays to Thursdays. Of course, you can also e-mail us at <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a> or make an appointment via the <a href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">booking form</a>. An appointment can take place online or at the office.
+            <br><br>You can ask us anything about Canvas, digital exams, video in teaching & learning, rubrics, blended learning, digital surveys, mastery paths and other online tools.
         </div>
 
         <!-- Tabel foto's en namen-->
@@ -164,7 +165,7 @@
                     <td style="width:35%; vertical-align: top; padding: 0 10px; "><strong>Piotr Breedveld</strong> <br /><i>Team member <br />Working days: mon - thu</i></td>
                 </tr>
             </tbody>
-        </table>        
+        </table>     
 
         <!-- Buttons -->
         <div class="buttons-keywords">
@@ -183,9 +184,9 @@
         <div class="content-block" style="background-color: #fafbff; border: 1px solid #351ca6">
             <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Final Grades has been upgraded</h4>
             <div class="content-item">
-                <b>The grade calculation tool within Canvas has undergone an update this year. The tool works largely the same but looks a little different than you may be used to. One benefit of the update is that the tool now works a lot faster, especially in courses with a large number of students.</b>
-                <br><br>Did you have difficulty preparing the calculation set-up last year? Or did you run into some issues submitting the grades to SIS? Perhaps you just have some very complicated ideas on how you’d like to calculate the final grade. Whatever the case, we strongly encourage you to set up a meeting with us by making an appointment with us. <a title="Book an appointment" href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">booking form</a> (select 'Final Grades support'). The appointment can be done online or on location.
-                <br><br>We are looking for teachers who want to leave their feedback on the Final Grades team. Sessions round will follow, please contact icto if you would like to participate.
+                <b>The grade calculation tool within Canvas has undergone an update this year. The tool works largely the same but looks a little different than you may be used to. One benefit of the update is that the tool now should work faster, especially in courses with a large number of students.</b>
+                <br><br>Additionally, the central IT team will be optimizing the interface and technical capabilities of the grade calculation system during the upcoming year. They would highly appreciate your feedback through one-on-one brainstorming sessions and testing in September. If you're interested in participating, please let us know at your earliest convenience.
+                <br><br>Did you have difficulty preparing the calculation set-up last year? Or did you run into some issues submitting the grades to SIS? Perhaps you just have some very complicated ideas on how you’d like to calculate the final grade. Whatever the case, we strongly encourage you to set up a meeting with us by making an appointment with us through our <a title="Book an appointment" href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">booking form</a> (select 'Final Grades support').
             </div>
             <div class="buttons-keywords">
                 <a class="keywords" title="Book an appointment" style="text-decoration: none;" href="https://outlook.office365.com/book/ICTOSocialSciences@Amsuni.onmicrosoft.com/" target="_blank">Book an appointment</a>
@@ -197,13 +198,13 @@
     <div class="col-md-6">
 
         <div class="content-block" style="background-color: #fafbff; border: 1px solid #351ca6">
-            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Assigning modules to sections (tutorial groups)</h4>
+            <h3 style="padding-bottom:4pt" class="header-icto ui-priority-primary">Assign modules to certain groups</h4>
             <div class="content-item">
-                <b>A new functionality within Canvas that we would like to point out to you is the ability to assign modules to certain sections of students.</b> 
-                <br><br>This works in a similar way that you can assign assignments or quizzes to sections, and it allows you to organize your Canvas course even more conveniently. The button below will take you to instructions that explain more about how you can structure your Canvas course.
+                <b>A new functionality within Canvas that we would like to point out to you is the ability to assign modules to specific sections of students, such as individual students or tutorial groups.</b> 
+                <br><br>This feature works similarly to how you can currently assign assignments or quizzes to different sections, offering you greater flexibility and convenience in organizing your Canvas course content. This functionality is fully supported on both laptops and mobile devices, ensuring the right accessibility for students. To learn more about how to structure your Canvas course using this feature, simply click the button below for detailed instructions.
             </div>
             <div class="buttons-keywords">
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://canvas.uva.nl/courses/169/pages/structuring-your-course-using-modules?module_item_id=1400" target="_blank">Using modules to structure your course</a>
+                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://community.canvaslms.com/t5/Instructor-Guide/How-do-I-assign-a-module-to-individual-sections-or-students/ta-p/609337" target="_blank">Assigning modules to sections</a>
             </div>
         </div>
 
@@ -217,7 +218,7 @@
 
 
 <!-- Banner: updates -->
-<img style="width: 100%; border-radius:5px; margin-top:14px; margin-bottom:13px" src="https://canvas.uva.nl/courses/8175/files/11400479/preview" alt="new-banner.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/11400479" data-api-returntype="File" />
+<img style="width: 100%; border-radius:5px; margin-top:14px; margin-bottom:13px" src="/courses/8175/files/11403990/preview" alt="updates-banner.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/11400479" data-api-returntype="File" />
 
 <!-- Rij 3 -->
 <div class="grid-row grid-row-blocks" style="align-items: flex-start;">
@@ -261,7 +262,7 @@
 </div>
 
 <!-- Banner: accessibility & privacy -->
-<img style="width: 100%; border-radius:5px; margin-top:14px; margin-bottom:13px" src="https://canvas.uva.nl/courses/8175/files/11400539/preview" alt="new-banner.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/11400539" data-api-returntype="File" />
+<img style="width: 100%; border-radius:5px; margin-top:14px; margin-bottom:13px" src="/courses/8175/files/11403995/preview" alt="access-privacy-banner.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/11400539" data-api-returntype="File" />
 
 <!-- Rij 4 -->
 <div class="grid-row grid-row-blocks" style="align-items: flex-start;">
