--- a/ICTO-SW/A-Z/Tools/weblectures.html
+++ b/ICTO-SW/A-Z/Tools/weblectures.html
@@ -17,22 +17,6 @@
     </div>
 </div>
 
-<p>&nbsp;</p>
-
-<p><span style="font-size: x-large;"><strong>New: The UvA switched from Mediasite to Panopto</strong></span></p>
-<blockquote style="margin-top: 10px;margin-left:28px;margin-bottom:25px;color:black">
-    <p style="font-size: 13pt;">
-        <b>From Mediasite to Panopto</b><br>
-        After the Christmas holidays, the web lecture service made a transition to a new supplier, resulting in the replacement of 35 recorders in the lecture halls. Starting from January 8th, lectures will no longer be recorded using Mediasite; instead, they will be recorded using the new system <b><a href="https://hva-uva.cloud.panopto.eu" target="blank" rel="noopener">Panopto</a></b>. The procedure for requesting web lectures will stay unchanged, and utilizing the new system is fairly straightforward.
-        <br><br>
-        <b>Accessing old videos</b><br>
-        In the meantime, new content can be accessed through <b><a href="https://hva-uva.cloud.panopto.eu" target="blank" rel="noopener">Panopto</a></b>, while old videos can still be viewed on <b><a href="https://webcolleges.uva.nl/Mediasite" target="blank" rel="noopener">Mediasite</a></b>, and they will remain accessible until the migration is fully completed.
-        <br><br>
-        <b>Technical issues</b><br>
-        With the switch to Panopto, you may have encountered some initial challenges. Technical issues arose during the first week, but they have since been resolved. Unfortunately, there are also some limitations with Panopto, as it is currently not available through the rich content editor in Canvas, unlike Mediasite. This means that teachers can't easily access lectures and embed them as they could before. The web lecture service is working to address this issue, but it is uncertain when this option will be reinstated in the future.
-    </p>
-</blockquote>
-
 <p><span style="font-size: x-large;"><strong>Requesting web lectures in the planner</strong></span></p>
 <blockquote style="margin-top: 10px;margin-left:28px;margin-bottom:25px;color:black">
     <p style="font-size: 13pt;">
@@ -49,6 +33,20 @@
         <br>&rarr;&nbsp; If there's a change of location or room, the request for the recording (or livestream) must be submitted again via the webcollegeplanner.
         <br>&rarr;&nbsp; Do not forget to wear the microphone provided by the webcollegedienst during the lecture, otherwise the weblecture recording will contain no audio and/or students online won't hear you.
         <br>&rarr;&nbsp; The livestream function has a delay of about 30 seconds which makes it not ideal for communicating with students at home. Alternitavely, a BRIO device is attached in every lecture hall by default and this will allow you to achieve the same goal, only without delay. Email <b><a title="mailto:icto-csw@uva.nl" href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a></b> if you have any questions about it.
+</blockquote>
+
+<p><span style="font-size: x-large;"><strong>Switch from Mediasite to Panopto</strong></span></p>
+<blockquote style="margin-top: 10px;margin-left:28px;margin-bottom:25px;color:black">
+    <p style="font-size: 13pt;">
+        <b>From Mediasite to Panopto</b><br>
+        After the Christmas holidays, the web lecture service made a transition to a new supplier, resulting in the replacement of 35 recorders in the lecture halls. Starting from January 8th, lectures will no longer be recorded using Mediasite; instead, they will be recorded using the new system <b><a href="https://hva-uva.cloud.panopto.eu" target="blank" rel="noopener">Panopto</a></b>. The procedure for requesting web lectures will stay unchanged, and utilizing the new system is fairly straightforward.
+        <br><br>
+        <b>Accessing old videos</b><br>
+        All weblectures can now be accessed through <b><a href="https://hva-uva.cloud.panopto.eu" target="blank" rel="noopener">Panopto</a></b>. You may expierence connection issues with lectures that were recoreded before 2022-2023. In that case, please contact the web lecture service (<b><a href="mailto:webcolleges@uva.nl">webcolleges@uva.nl</a></b>).
+        <br><br>
+        <b>Technical issues</b><br>
+        With the switch to Panopto, you may have encountered some initial challenges. Technical issues arose during the first week, but they have since been resolved. Unfortunately, there are also some limitations with Panopto, as it is currently not available through the rich content editor in Canvas, unlike Mediasite. This means that teachers can't easily access lectures and embed them as they could before. The web lecture service is working to address this issue, but it is uncertain when this option will be reinstated in the future.
+    </p>
 </blockquote>
 
 <p><span style="font-size: x-large;"><strong>Sharing your lectures with students</strong></span></p>
