update newsletter (incl homepage)

--- a/ICTO-SW/Homepage/current_homepage.html
+++ b/ICTO-SW/Homepage/current_homepage.html
@@ -95,19 +95,19 @@
             </div>
         </div>
 
-        <!-- New in 2022/23 -->
+        <!-- New in 2024/25 -->
         <div class="col-xs-20 col-md-6">
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
 
                     <span style="float: middle; font-size: 18pt; text-align: center;">
 
-                        New in <img style="width: auto; float: center; height: 30px; text-align: center; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/9205446/preview" alt="2223.png" width="109" height="30" />
+                        New in <span style="border-radius:5px; padding: 5px 10px; margin: 10px 5px; background-color:#182c44; color:white;">2024-25</span>
 
                         <!-- Newsletter -->
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter-2023-24" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/icto-newsletter-2023-24" data-api-returntype="Page">
                             <h5><span style="font-size: 15pt; color: #014AAD;"><strong>ICTO NEWSLETTER</strong></span></h5>
-                            <span style="font-size: 11pt; color: #34495e;"><em>Edition: February 2024, Block 4</em></span>
+                            <span style="font-size: 11pt; color: #34495e;"><em>Edition: September 2024, Block 1</em></span>
                         </a>
 
                     </span>
