--- a/ICTO-SW/Nieuwsbrief/24-25-ed1.html
+++ b/ICTO-SW/Nieuwsbrief/24-25-ed1.html
@@ -78,7 +78,8 @@
             margin-left:5px;
             width:fit-content;
             font-size:10pt;
-            float:right
+            float:right;
+            margin-top: 5px;
         }
 
         .keywords:hover {
@@ -95,6 +96,10 @@
             line-height:1.3em;
         }
 
+        #breadcrumbs {
+            display:none;
+        }
+
     </style>
 </head>
 
@@ -106,7 +111,7 @@
     <div class="col-md-3"><span class="topmenu year" style="text-decoration: none;">2024/25</span></div>
     <div class="col-md-3"><a href="https://canvas.uva.nl/courses/8175" target="_blank" class="topmenu buttons1" style="text-decoration: none;"><i class="icon-home"></i>&nbsp;&nbsp;Home</a></div>
     <div class="col-md-3"><a href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" class="topmenu buttons1" style="text-decoration: none;"><i class="icon-group"></i>&nbsp;&nbsp;Contact</a></div>
-    <div class="col-md-3"><a href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter-2023-24" target="_blank" class="topmenu buttons1" style="text-decoration: none;"><i class="icon-unmuted"></i>&nbsp;&nbsp;News 2023/24</a></div>
+    <div class="col-md-3"><a href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="_blank" class="topmenu buttons1" style="text-decoration: none;"><i class="icon-unmuted"></i>&nbsp;&nbsp;News 2023/24</a></div>
 </div>
 
 <!-- Rij 1 -->
@@ -201,7 +206,7 @@
                 <br><br>This feature works similarly to how you can currently assign assignments or quizzes to different sections, offering you greater flexibility and convenience in organizing your Canvas course content. This functionality is fully supported on both laptops and mobile devices, ensuring the right accessibility for students. To learn more about how to structure your Canvas course using this feature, simply click the button below for detailed instructions.
             </div>
             <div class="buttons-keywords">
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://community.canvaslms.com/t5/Instructor-Guide/How-do-I-assign-a-module-to-individual-sections-or-students/ta-p/609337" target="_blank">Assigning modules to sections</a>
+                <a class="keywords" title="Assign modules to sections" style="text-decoration: none;" href="https://community.canvaslms.com/t5/Instructor-Guide/How-do-I-assign-a-module-to-individual-sections-or-students/ta-p/609337" target="_blank">Assigning modules to sections</a>
             </div>
         </div>
 
@@ -242,10 +247,10 @@
             </div>
 
             <div class="buttons-keywords">
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360018836957-The-appraisal-form" target="_blank">Appraisal form</a>
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360027174053-The-hand-in-assignment" target="_blank">Hand-in assignment</a>
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360011744017-Assignment-types" target="_blank">Self review</a>
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360011858078-The-peer-reviewed-digital-test" target="_blank">Peer review</a>
+                <a class="keywords" title="Appraisal form" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360018836957-The-appraisal-form" target="_blank">Appraisal form</a>
+                <a class="keywords" title="Hand-in assignment" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360027174053-The-hand-in-assignment" target="_blank">Hand-in assignment</a>
+                <a class="keywords" title="Self review" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360011744017-Assignment-types" target="_blank">Self review</a>
+                <a class="keywords" title="Peer review" style="text-decoration: none;" href="https://support.ans.app/hc/en-us/articles/360011858078-The-peer-reviewed-digital-test" target="_blank">Peer review</a>
             </div>
         </div>
 
@@ -265,7 +270,7 @@
                 You can continue to request web lectures as usual through the <a href="http://webcollegeplanner.uva.nl/" target="_blank">webcollegeplanner</a>. If you have any questions, feel free to reach out to the web lecture service.
             </div>
             <div class="buttons-keywords">
-                <a class="keywords" title="Ans" style="text-decoration: none;" href="https://canvas.uva.nl/courses/8175/pages/weblectures" target="_blank">Weblecture information page</a>
+                <a class="keywords" title="Web lectures" style="text-decoration: none;" href="https://canvas.uva.nl/courses/8175/pages/weblectures" target="_blank">Weblecture information page</a>
             </div>
         </div>
 
@@ -292,7 +297,7 @@
 
             <!-- Buttons -->
             <div class="buttons-keywords">
-                <a class="keywords" title="Book an appointment" style="text-decoration: none;" href="https://uba.uva.nl/en/support/copyright/lecturers/copyright-checker.html" target="_blank">Copyright checker</a>
+                <a class="keywords" title="Copyright checker" style="text-decoration: none;" href="https://uba.uva.nl/en/support/copyright/lecturers/copyright-checker.html" target="_blank">Copyright checker</a>
             </div>
 
         </div>
@@ -309,7 +314,7 @@
         
             <!-- Buttons -->
             <div class="buttons-keywords">
-                <a class="keywords" title="Book an appointment" style="text-decoration: none;" href="https://extranet.uva.nl/en/content/a-z/ict-code-of-conduct/ict-code-of-conduct.html" target="_blank">ICT Code of Conduct</a>
+                <a class="keywords" title="ICT Code of Conduct" style="text-decoration: none;" href="https://extranet.uva.nl/en/content/a-z/ict-code-of-conduct/ict-code-of-conduct.html" target="_blank">ICT Code of Conduct</a>
             </div>
             
         </div>
