homepage link aangepast van TestVision naar Ans

--- a/ICTO-SW/Homepage/current_homepage.html
+++ b/ICTO-SW/Homepage/current_homepage.html
@@ -123,9 +123,9 @@
                         Useful guides
 
                         <!-- button 1 -->
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 100%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page">
-                            <h5><span style="font-size: 15pt; color: #014AAD;"><strong>TestVision</strong></span></h5>
-                            <span style="font-size: 11pt; color: #34495e;"><em>Digital exams | Deadlines & Overview | How to create exam | Assessment & Grades | Inspection </em></span>
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 100%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/45162/pages/tools-ans-about" target="" data-api-endpoint="https://canvas.uva.nl/courses/45162/pages/tools-ans-about" data-api-returntype="Page">
+                            <h5><span style="font-size: 15pt; color: #014AAD;"><strong>Ans</strong></span></h5>
+                            <span style="font-size: 11pt; color: #34495e;"><em>How to create a digital exam | Quickstart | Grading | Inspection | FAQ </em></span>
                         </a>
 
                         <!-- button 2 -->
