exams a-z tvo verwijderd, ans toegevoegd

--- a/ICTO-SW/A-Z/Exams/exams-home-az.html
+++ b/ICTO-SW/A-Z/Exams/exams-home-az.html
@@ -14,36 +14,6 @@
                     <tbody>
                         <tr>
                             <td style="width: 19.3883%;">
-                                <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #3598db;"> <strong> <span style="color: #000000;">TestVision</span> </strong> </span> </span></p>
-                                <p>&nbsp;</p>
-                            </td>
-                            <td style="width: 4.404%;">
-                                <p><strong>&nbsp;</strong></p>
-                            </td>
-                            <td style="width: 56.2347%;">
-                                <div class="styleguide-section__grid-demo-element"><img style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4378110/preview" alt="TEELEN-Logo-RGB.png" width="30" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378110" data-api-returntype="File" />
-                                    <ul class="pill" style="background: #6EACD8; margin-top: 20px; margin-right: 8px;">
-                                        <li><span style="color: #ffffff;"><strong>TestVision</strong></span></li>
-                                    </ul>
-                                    <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
-                                        <li><span style="color: #ffffff;"><strong>Digital examination software</strong></span></li>
-                                    </ul>
-                                </div>
-                                <p><span style="color: #5a5a5a;">TestVision is a digital examination application for exams and depends more on ICTO. Compared to creating exams on Canvas, you will need a little more time to learn how to work with TestVision, but there are certainly more options and settings at your disposal to create strong exams and to review and adjust the quality of questions. Visit our TestVision page to become familiar with the overall creation process, and when you're ready, contact icto if you'd like to create an exam with TestVision.</span></p>
-                            </td>
-                            <td style="width: 4.47733%;">
-                                <p><strong>&nbsp;</strong></p>
-                            </td>
-                            <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision" data-api-returntype="Page"><i class="icon-arrow-right"></i> <span>&nbsp;View more</span> </a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #e9ebed; padding: 15px;">
-                <table style="border-collapse: collapse; width: 100.812%;" border="0">
-                    <tbody>
-                        <tr>
-                            <td style="width: 19.3883%;">
                                 <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #3598db;"> <strong> <span style="color: #000000;">Ans</span> </strong> </span> </span></p>
                                 <p>&nbsp;</p>
                             </td>
@@ -59,12 +29,12 @@
                                         <li><span style="color: #ffffff;"><strong>Digital examination software</strong></span></li>
                                     </ul>
                                 </div>
-                                <p><span style="color: #5a5a5a;">In the academic year 2023-2024 the UvA will transition to a new software system for digital exams. This is the result of a statuatory European tender. Two suppliers had registered for this tender. After an extensive evaluation, Ans emerged as the best choice. The current supplier, TestVision, came in second. This means that all faculties of the UvA will gradually switch to Ans during the upcoming academic year.</span></p>
+                                <p><span style="color: #5a5a5a;">Starting 2024-2025, Ans will be the UvA's new digital examination software. With Ans, the UvA acquires an innovative partner for the long term with a contract of at least 6 years with an extension option to a maximum of 15 years. This long term is the basis for a stable service and cooperation. Ans Exam has extensive experience in Higher Education with formative- and large-scale summative tests. The continuous development and innovation of Ans Exam will be partly based on the specific needs of the UvA.</span></p>
                             </td>
                             <td style="width: 4.47733%;">
                                 <p><strong>&nbsp;</strong></p>
                             </td>
-                            <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/45162/pages/home-en" data-api-endpoint="https://canvas.uva.nl/courses/45162/pages/home-en" data-api-returntype="Page"><i class="icon-arrow-right"></i> <span>&nbsp;View more</span> </a></td>
+                            <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/45162/pages/tools-ans-about" data-api-endpoint="https://canvas.uva.nl/courses/45162/pages/tools-ans-about" data-api-returntype="Page"><i class="icon-arrow-right"></i> <span>&nbsp;View more</span> </a></td>
                         </tr>
                     </tbody>
                 </table>
