--- a/Training/anchor_links.html
+++ b/Training/anchor_links.html
@@ -1,7 +1,11 @@
-
+<!-- Titel (header 1) -->
 <h1>Lorem ipsum dolor sit amet. Ut natus dolores vel earum vero aut fugit modi.</h1>
+
 <p>Et excepturi quas et ipsam magnam hic explicabo:</p>
+
+<!-- Een lijst (ordered list <ol> = genummerd) -->
 <ol>
+    <!-- Anchor links -->
     <li><a href="#stap1">Et voluptatibus omnis est quaerat asperiores vel dolore assumenda.</a></li>
     <li><a href="#stap2">Et cupiditate magni ut omnis provident aut aliquam quidem.</a></li>
     <li><a href="#stap3">Sit consectetur explicabo ut deleniti molestiae.</a></li>
@@ -9,12 +13,14 @@
     <li><a href="#stap5">Est dicta omnis et inventore quos.</a></li>
     <li><a href="#stap6">Et magni iste vel adipisci repellendus.</a></li>
 </ol>
-
 <p>Lorem ipsum dolor sit amet. Aut necessitatibus quod et nulla itaque qui voluptatem nobis qui obcaecati sunt ea repudiandae nobis. Non dolor corrupti ad mollitia molestias aut quidem omnis ex corporis deleniti. Et harum ipsum et dicta placeat sit nemo unde in illum dolorum qui distinctio suscipit. Sed itaque dolor qui molestiae excepturi qui soluta dicta. Ea quia quia non unde voluptate qui quia enim!</p>
 <p>Aut quia internos et veniam velit aut nulla omnis. Sed amet obcaecati non eaque rerum id asperiores vitae qui totam molestiae non corporis vero quo modi fuga et dicta illum. Ad quia nostrum eum consectetur rerum eum commodi facere. Non beatae fugiat est nisi rerum aut expedita maiores? Qui dolor atque et molestias omnis et accusantium quasi quo harum enim hic quisquam quasi aut sint nesciunt et eveniet voluptatem. Non quod maxime sit soluta quas qui sapiente eius? Ut quod dicta aut omnis deleniti id laborum quasi a voluptas minima aut perspiciatis accusantium qui distinctio molestiae ut sint laudantium. At architecto modi hic sunt dolore ut totam itaque et voluptatem voluptatem. Sit necessitatibus quia non consequatur dolores et necessitatibus dolorem ab praesentium ratione.</p>
 
+<!-- Bestemming van de anchor link (rondom een spatie &nbsp; geplaatst i.p.v. de titel voor extra witruimte aan de bovenkant) -->
 <a id="stap1"></a>&nbsp;</a>
+<!-- Titel (header 3) -->
 <h3>1. Et voluptatibus omnis est quaerat asperiores vel dolore assumenda.</h3>
+<!-- Paragraaf -->
 <p>Lorem ipsum dolor sit amet. In veniam aliquid ea blanditiis autem et nostrum amet est atque Quis 33 rerum sint! Qui doloribus distinctio sit quia quod quo architecto officia. Et odit eveniet ea doloremque aperiam id expedita rerum 33 nulla dolorum et necessitatibus doloribus sed autem eligendi At rerum voluptatem. Non dolores accusamus ut vero quisquam id fuga placeat aut dolorum aliquid quo quasi odio et ullam debitis. Qui cumque tempore ut animi distinctio eos suscipit eligendi. Qui galisum sunt nam iste minima aut totam suscipit est rerum nihil qui voluptatibus fugit ut unde totam ab iure mollitia! Ex rerum consequuntur sed quos porro ut tenetur sequi sed consequatur voluptatem et quod dolorum. Ut inventore laboriosam ut ullam impedit non beatae voluptatem.</p>
 
 <a id="stap2"></a>&nbsp;</a>
