--- a/Training/grid_system_toelichting.html
+++ b/Training/grid_system_toelichting.html
@@ -3,16 +3,10 @@
 
     <!-- Maak een kolom over de hele breedte (md-12) -->
     <div class="col-xs-12 col-md-12">
-
-        <!-- Plaats een element in die kolom -->
-        <div class="styleguide-section__grid-demo-element">
-
-            <!--contentbox-->
-            <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #e2ba16;">
-                <!-- Inhoud -->
-            </div>
-        </div>
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #e2ba16;"></div>
     </div>
+
+<!-- Sluit grid row -->
 </div>
 
 <!-- Open grid row -->
@@ -22,44 +16,31 @@
     <div class="col-xs-12 col-md-4">
 
         <!-- Plaats een element in kolom 1 -->
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #477aac;">
-                <!-- Inhoud -->
-                <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">1</span></p>
-            </div>
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #477aac;">
+            <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">1</span></p>
         </div>
 
         <!-- Plaats nóg een element in kolom 1 -->
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #477aac;">
-                <!-- Inhoud -->
-                <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">1</span></p>
-            </div>
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #477aac;">
+            <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">1</span></p>
         </div>
 
     </div>
 
     <!-- Kolom 2 -->
     <div class="col-xs-12 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #760a9d;">
-                <!-- Inhoud -->
-                <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">2</span></p>
-            </div>
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #760a9d;">
+            <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">2</span></p>
         </div>
     </div>
 
     <!-- Kolom 3 -->
     <div class="col-xs-12 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #1db020;">
-                <!-- Inhoud -->
-                <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">3</span></p>
-            </div>
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #1db020;">
+            <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">3</span></p>
         </div>
     </div>
 
-<!-- Sluit grid row -->
 </div>        
 
 <p>&nbsp;</p>
