--- a/Training/grid_system_code.html
+++ b/Training/grid_system_code.html
@@ -1,6 +1,6 @@
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
-        <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffefef; border-color: #bc0031; padding: 20px; margin-top: 25px;">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffefef; border-color: #bc0031; padding: 20px;">
             <span style="color: #c71f23;"><h3>At alias ipsam in tempore maiores ea quidem dolor.</h3></span>
             <p>Eum eveniet molestiae in fugiat illum ut unde molestiae eum autem expedita et corporis officia. Aut pariatur voluptas eum similique omnis sed rerum officia. Sed laudantium quae ut omnis dolore hic aspernatur pariatur et quaerat voluptatem est tempora natus. Est magni deleniti sed consequatur harum et explicabo modi? At praesentium debitis ut illum quam quo sunt fugit non voluptatem corrupti qui impedit perspiciatis.</p>
         </div>
