--- a/Training/grid_system_toelichting.html
+++ b/Training/grid_system_toelichting.html
@@ -16,12 +16,12 @@
     <div class="col-xs-12 col-md-4">
 
         <!-- Plaats een element in kolom 1 -->
-        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #477aac;">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; margin-top: 5px; height: 210px; background-color: #477aac;">
             <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">1</span></p>
         </div>
 
         <!-- Plaats nóg een element in kolom 1 -->
-        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #477aac;">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; margin-top: 5px; height: 210px; background-color: #477aac;">
             <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">1</span></p>
         </div>
 
@@ -29,14 +29,14 @@
 
     <!-- Kolom 2 -->
     <div class="col-xs-12 col-md-4">
-        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #760a9d;">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; margin-top: 5px; height: 210px; background-color: #760a9d;">
             <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">2</span></p>
         </div>
     </div>
 
     <!-- Kolom 3 -->
     <div class="col-xs-12 col-md-4">
-        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: 210px; background-color: #1db020;">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; margin-top: 5px; height: 210px; background-color: #1db020;">
             <p style="text-align: center;"><span style="color: #ffffff; font-size: 30pt;">3</span></p>
         </div>
     </div>
